npm is so fucked يا إلهي في الزنجي

--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,8 @@
-engine-strict=true
+audit=false
+fund=false
+update-notifier=false
+registry=https://registry.npmjs.org/
+fetch-timeout=60000
+fetch-retry-mintimeout=20000
+fetch-retry-maxtimeout=120000
+maxsockets=1
